<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".scanktp">

    <RelativeLayout
        android:id="@+id/group_385"
        android:layout_width="220dp"
        android:layout_height="31dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="41dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/vector"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:background="@drawable/button2"
            android:onClick="ScanTutupBotol"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/scan_tutup_"
            android:layout_width="198dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:gravity="center_horizontal|center_vertical"
            android:lineSpacingExtra="3sp"
            android:text="@string/scan_tutup_"
            android:textAppearance="@style/scan_tutup_" />
    </RelativeLayout>

    <View
        android:id="@+id/freestocks_"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/olive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_385" />

    <TextView
        android:id="@+id/total_tutup"
        android:layout_width="179dp"
        android:layout_height="72dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-5dp"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="1sp"
        android:text="@string/total_tutup"
        android:textAppearance="@style/total_tutup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/freestocks_" />


    <TextView
        android:id="@+id/setiap_kali"
        android:layout_width="267dp"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-10dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/scan_ktp_un"
        android:textAppearance="@style/setiap_kali"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_tutup" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="270dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/group_388"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setiap_kali" />



    <RelativeLayout
        android:id="@+id/frame_3670"
        android:layout_width="319dp"
        android:layout_height="122dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/btn01"
            android:text="Save"
            android:textSize="20dp"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="7dp"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:background="@drawable/btn02"
            android:text="Cancel" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>