<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".scan_ggal">

    <RelativeLayout
        android:layout_width="348dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:onClick="pindahtohome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/button2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="0dp"
            android:layout_toEndOf="@+id/imageView"
            android:fontFamily="@font/montserratsemibold"
            android:text="Scan Tutup botol"
            android:textColor="@color/black"
            android:textSize="17dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="621dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:id="@+id/freestocks_"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="110dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/olive"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

        </FrameLayout>

        <TextView
            android:id="@+id/total_tutup"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-5dp"
            android:gravity="center_horizontal|center_vertical"
            android:lineSpacingExtra="1sp"
            android:text="@string/total_tutup"
            android:textAppearance="@style/total_tutup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/setiap_kali"
            android:layout_width="291dp"
            android:layout_height="55dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginTop="-10dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/setiap_kali"
            android:textAppearance="@style/setiap_kali"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="229dp"
            android:layout_height="224dp"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:background="@drawable/tutupscan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setiap_kali" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="171dp">

            <LinearLayout
                android:id="@+id/pesan"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                android:background="@drawable/rectangle_499"
                android:orientation="horizontal"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ikon_susces"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11dp"
                    android:gravity="center"
                    android:fontFamily="@font/montserratbold"
                    android:text="@string/scan_ggal"
                    android:layout_gravity="center_vertical"
                    android:paddingStart="10dp"/>

            </LinearLayout>


            <Button
                android:id="@+id/btn2"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:layout_below="@+id/pesan"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:layout_marginStart="-1dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/btn01"
                android:fontFamily="@font/montserratmedium"
                android:onClick="submid"
                android:text="Submit"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/pesan" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="300dp"
                android:layout_height="55dp"
                android:layout_below="@+id/btn2"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:layout_marginTop="9dp"
                android:background="@drawable/btn02"
                android:fontFamily="@font/montserratbold"
                android:onClick="cancel"
                android:text="Cancel"
                android:textColor="#1A529D"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn2" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>